attempt to fix background on mobile

--- a/css/nav-footer.css
+++ b/css/nav-footer.css
@@ -106,7 +106,10 @@ footer {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  -webkit-background-size:cover;
+  -moz-background-size:cover;
+  -o-background-size:cover;
+  background-size:cover;
 }
 
 .bgimg-1 {
